# RA.Aid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.test.runtime  Makefile  README.md  list_models.py  pyproject.toml  requirements-dev.txt
.github/workflows/: test-version.yml  tests.yml
.ra-aid/: pk.db
.ra/prompts/: 2025-04-13_00:02.md  2025-04-13_13:08.md  2025-04-13_14:07.md  2025-04-13_17:41.md  2025-04-13_19:59.md  2025-04-13_21:29.md  2025-04-13_21:44.md  2025-04-13_21:50.md  2025-04-13_22:30.md
components/: implementation.py  planning.py  research.py
docs/: package-lock.json
docs/docs/configuration/: thinking-models.md
lilraaid/: __main__.py
ra_aid/: __main__.py  agent_core.py  agent_utils.py  env.py  file_listing.py  langsmith_config.py  llm.py  models_params.py  prompts.py  provider_strategy.py  rate_limits.py  tool_configs.py  tracing.py
ra_aid/.ra-aid/: pk.db
ra_aid/agent_backends/: ciayn_agent.py
ra_aid/agents/: ciayn_agent.py
ra_aid/console/: output.py
ra_aid/proc/: interactive.py
ra_aid/prompts/: __init__.py  chat_prompts.py  multi_agent_prompts.py  web_research_prompts.py
ra_aid/scripts/: extract_changelog.py
ra_aid/tools/: __init__.py  agent.py  expert.py  handle_user_defined_test_cmd_execution.py  quick_web_search.py  select_web_search.py  web_search_jina.py
test_env/: pyvenv.cfg
tests/ra_aid/: test_agent_utils.py  test_default_provider.py  test_disable_thinking.py  test_ensure_thinking_block.py  test_env.py  test_file_listing.py  test_llm.py  test_rate_limits.py  test_sonnet37_workaround.py  test_thinking_integration.py  test_tool_configs.py
tests/ra_aid/proc/: test_interactive.py  test_windows_compatibility.py
tests/ra_aid/scripts/: test_extract_changelog.py
tests/ra_aid/tools/: test_execution.py  test_expert.py  (+1 more)
tests/webui/: test_app.py
webui/: app.py  config.py  server.py  socket_interface.py  test_app.py  test_websocket.py
